# genp

./: .gitignore  CMakeLists.txt  NOTICE.txt  resources.txt
genp/: CMakeLists.txt  Gb_CPU.cpp  Gb_CPU.h  HalfRegister.cpp  HalfRegister.h  ReadWriteWrapper.h  ReadWriteWrapper8.h  Register.cpp  Register.h  RegisterAF.cpp  RegisterAF.h  constants.h  genp.cpp  genp.h  main.cpp  typedefs.h
